2007-12-11  Attilio Fiandrotti  <attilio.fiandrotti@gmail.com>

	Merge from trunk:

	* gdk/directfb/gdkdrawable-directfb.c: Applied a patch by Claudio
	Ciccani	which fixes the mixing of gdk and cairo rendering.

2007-12-09 09:56:06  Attilio Fiandrotti  <attilio.fiandrotti@gmail.com>

	Merge from trunk:

	* gdk/directfb/gdkgc-directfb.c:
	* gdk/directfb/gdkdrawable-directfb.c:
	* gdk/directfb/gdkdirectfb.h:
	* gdk/directfb/gdkwindow-directfb.c:
	* gdk/directfb/gdkprivate-directfb.h: Committed several patches
	(window_flip_group, no_background_pixmap_fix, opt_temp_region2,
	blit_after_cairo_fix, rect_clip_fix, fast_blend, opt_temp_region_etc,
	opt_clip_region_and_fill_rects, no_state_resets) by Denis Oliver Knopp
	which are expected to improve the performance of the DirectFB backend.
	Experimental pieces of code (GDK_DIRECTFB_NO_EXPERIMENTS) are disabled.

2007-12-06 18:45:06  Attilio Fiandrotti  <attilio.fiandrotti@gmail.com>

	Merge from trunk:
	
	* gdk/directfb/gdkevents-directfb.c: Committed a patch by DOK to fix
	GDK events generations in the DirectFB backend.

2007-12-4  Cody Russell  <cody@jhu.edu>

	Merge from trunk:

	* modules/engines/ms-windows/msw_style.c: Draw focus rect for
	buttons with relief set to GTK_RELIEF_NONE. (#487954)

2007-12-4  Cody Russell  <cody@jhu.edu>

	Merge from trunk:

	* modules/engines/ms-windows/Theme/gtk-2.0/gtkrc:
	Disable beeps when backspacing in textviews by default on
	Win32 systems. (#490624, Daniel Atallah)

2007-12-4  Cody Russell  <bratsche@gnome.org>

	Merge from trunk:

	* gtk/gtkpaned.c: (gtk_paned_set_position) [Win32]:
	On Windows, queue a redraw of child2 whenever we set
	the pane handle position.  This is unfortunately kind
	of hacky, but solves the visual artifacts that were
	occuring on at least certain types of child widgets
	(e.g., text views and tree views) that are inside
	horizontal or vertical panes. (#144269)

2007-10-05  Murray Cumming  <murrayc@murrayc.com>
