@@ -1,3 +1,10 @@
+2008-01-16  Matthias Clasen  <mclasen@redhat.com>
+
+	Merge from trunk:
+
+	* gtk/gtkcombobox.c (gtk_combo_box_set_model): Emit
+	the notify::model signal.  (#509819, David Zeuthen)
+
 2007-12-11  Attilio Fiandrotti  <attilio.fiandrotti@gmail.com>
 
 	Merge from trunk:
